<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:cardCornerRadius="8dp"
        android:layout_margin="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageCasiopea"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:scaleType="centerCrop"
                android:src="@drawable/casiopea"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/textCasiopea"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/textCasiopea"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/casiopea"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:padding="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageCasiopea"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:cardCornerRadius="8dp"
        android:layout_margin="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageOrion"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:scaleType="centerCrop"
                android:src="@drawable/orion"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/textOrion"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/textOrion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/orion"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:padding="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageOrion"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        app:cardCornerRadius="8dp"
        android:layout_margin="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageOsaMaior"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:scaleType="centerCrop"
                android:src="@drawable/osamaior"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/textOsaMaior"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/textOsaMaior"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/osa_maior"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center_vertical"
                android:padding="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/imageOsaMaior"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button_lendas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lendas"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="12dp"
        android:backgroundTint="?attr/colorSecondaryFixedDim"
        />

    <Button
        android:id="@+id/button_observacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/observacion"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="8dp"
        android:backgroundTint="?attr/colorSecondaryFixedDim"/>

</LinearLayout>